Fix navbar background on mobile

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -31,6 +31,7 @@
         font-size: 1.1rem;
         border-top: 1px solid #2c2c2c;
         transition: background 0.15s;
+        background: #fff;
 
         &:last-child {
           border-bottom: 1px solid #2c2c2c;
